feat: adiciona V3 e V4 (StructuredTaskScope) e tabela de resultados